# interview

./: LICENSE  README.md
alphabet_position/: meson.build  solution.cpp  tests.cpp
archivator/: meson.build  solution.cpp  tests.cpp
bit_counting/: meson.build  solution.c  tests.c
lost_number/: meson.build  solution.c  tests.c
vowel_count/: meson.build  solution.c  tests.c
